receipt footer was getting truncated

--- a/donation/templates/receipt.html
+++ b/donation/templates/receipt.html
@@ -139,6 +139,7 @@
     .footer-content{
       margin:auto;
       max-width:1148px;
+      padding-right:50px;
     }
 
     /* Pushing blocks */
@@ -261,7 +262,7 @@
     <div class="content">
       <h2>Donation Receipt</h2>
       <p>
-        On behalf of everyone you’re helping, thank you for your gift. This receipt serves as confirmation that your tax deductible donation has been received and processed.
+        On behalf of everyone you’re helping, thank you for your gift. This receipt serves as confirmation that your donation has been received and processed.
       </p>
       </br>
       <h3>Details</h3>
