instructions on how to upload donations

--- a/donation/templates/transitional_upload_form.html
+++ b/donation/templates/transitional_upload_form.html
@@ -6,10 +6,25 @@
 <p>Do the following:</p>
 <ol>
     <li>
-        Login in to the <a href="http://effectivealtruism.org.au/user">main site</a>.
+        Login in to the <a href="http://effectivealtruism.org.au/user">main site</a>
     </li>
     <li>
-        Download the donation data using the following options: TODO. It doesn't matter what the file name is.
+        Go to <a href="https://effectivealtruism.org.au/donate#overlay-context=donate">https://effectivealtruism.org.au/donate#overlay-context=donate</a>
+    </li>
+    <li>
+        Click Results -> Download
+    </li>
+    <li>
+        Delimited text -> Comma (,)
+    </li>
+    <li>
+        Click on "Label" once (won't appear to do anything, that's okay)
+    </li>
+    <li>
+        Click on "Field key" once (won't appear to do anything, that's okay)
+    </li>
+    <li>
+        Click "Download" at the bottom. It doesn't matter what the file name is.
     </li>
     <li>
         Upload the file below
