--- a/donation/templates/reconciliation.html
+++ b/donation/templates/reconciliation.html
@@ -41,7 +41,7 @@
         {% endfor %}
     </table>
 <h2>
-    Unreconciled transactions
+    Transactions that are not reconciled to Pledges
 </h2>
     <table>
         <th>Date</th>
