--- a/donation/templates/transitional_upload_form.html
+++ b/donation/templates/transitional_upload_form.html
@@ -18,10 +18,7 @@
         Delimited text -> Comma (,)
     </li>
     <li>
-        Click on "Label" once (won't appear to do anything, that's okay)
-    </li>
-    <li>
-        Click on "Field key" once (won't appear to do anything, that's okay)
+        Click on "Field key" once (may not appear to do anything, that's okay)
     </li>
     <li>
         Click "Download" at the bottom. It doesn't matter what the file name is.
