--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -1,6 +1,7 @@
 {% load humanize %}
 {% load bootstrap3 %}
 {% load static %}
+{% load pin_payment_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,13 +9,8 @@
     <title>Title</title>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7uon3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
+          integrity="" crossorigin="anonymous">
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
@@ -27,81 +23,164 @@
             crossorigin="anonymous"></script>
 
     {{ form.media }}
+    {% pin_header "test" %}
 
 </head>
 
-
 <body>
-{{ org }}
+
 <div class="container">
 
-    {% for i in '123' %}
-    <div class="col-md-4">
-    <div class="hovereffect">
-        <img class="img-responsive" src="https://eahub.org/sites/eahub.org/files/EA-Logo-redbg.png" alt="">
-            <div class="overlay">
-                <h2>Effect 13</h2>
-				<p>
-					<a class="info nextBtn" href="#">Donate now</a>
-				</p>
+    <div class="stepwizard col-md-offset-3">
+        <div class="stepwizard-row setup-panel">
+            <div class="stepwizard-step">
+                <a href="#step-1" type="button" class="btn btn-primary btn-circle">1</a>
+                <p>Choose charity</p>
+            </div>
+            <div class="stepwizard-step">
+                <a href="#step-2" type="button" class="btn btn-default btn-circle" disabled="disabled">2</a>
+                <p>Your details</p>
+            </div>
+            <div class="stepwizard-step">
+                <a href="#step-3" type="button" class="btn btn-default btn-circle" disabled="disabled">3</a>
+                <p>Payment</p>
+            </div>
+            <div class="stepwizard-step">
+                <a href="#step-4" type="button" class="btn btn-default btn-circle" disabled="disabled">4</a>
+                <p>Confirmation</p>
             </div>
         </div>
     </div>
-    {% endfor %}
+
+    <form role="form" action="" method="post">
+        <div class="row setup-content" id="step-1">
+            <div class="col-xs-6 col-md-offset-3">
+                <div class="col-md-12">
 
 
+                    <div class="row top-buffer">
+                        {% for charity in form.partner_charities %}
+                            <div class="col-md-4 col-buffer">
+                                <div class="hovereffect">
+                                    <img class="img-responsive img-charity" src={{ charity.website_image.url }} alt="">
+                                    <div class="overlay">
+                                        <h2>{{ charity.website_label }}</h2>
 
+                                            <a id="id_1234" class="info nextBtn charityClick" href="#">
+                                                <param value={{ charity.id }}>Donate now
+                                                </param>
+                                            </a>
 
-    <br><br><br><br><br><br><br><br><br>
-
-    {% bootstrap_label "How do you wish to donate?" %}
-
-    <p>
-        You can donate by bank transfer, credit card, or cheque. No transaction costs are incurred by us or you with
-        these payment methods.
-    </p>
-
-    <button type="button" class="btn btn-default btn-sm btn-pmt-method" data-toggle="collapse"
-            data-target="id_bank_transfer" id="id_btn_bank_transfer" value="1">Bank transfer</button>
-    <button type="button" class="btn btn-default btn-sm btn-pmt-method" value="2">Credit card</button>
-    <button type="button" class="btn btn-default btn-sm btn-pmt-method" value="3">Cheque</button>
-
-    <div id="id_bank_transfer">
-        <br>Donations by bank transfer take two steps to set up.<br><br>First, you must register your intent to make a
-        single,
-        or recurring, transfer to our account by completing the form below. You will receive a unique code to use in the
-        transaction.<br><br>Second, you must setup the bank transfer with your bank, using the unique code supplied.
-    </div>
-
-    <br><br>
-    {% bootstrap_label "Select the amount you'd like to donate" %}
-    <p>
-        {% for amt_text, amt_val in form.donation_amounts %}
-            <button type="button" class="btn btn-default btn-sm btn-amt" id="id_{{ amt_val }}"
-                    value={{ amt_val }}>{{ amt_text }}</button>
-        {% endfor %}
-        <button type="button" class="btn btn-default btn-sm btn-amt" data-toggle="collapse"
-                data-target="#id_formgroup_amount">Other
-        </button>
-    </p>
-
-    <form action="" method="post">{% csrf_token %}
-
-        {% for field in form %}
-            <div class="form-group" id="id_formgroup_{{ field.name }}">
-                {% if field.name in form.show_labels %}
-                    {% bootstrap_label field.label %}
-                {% endif %}
-                {% bootstrap_field field layout="vertical" vertical_field_class="col-md-3" show_label=False %}
+                                    </div>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
-        {% endfor %}
-
-        <div class="form-actions">
-            <button type="submit" class="btn btn-primary btn-lg" value="Submit">Submit</button>
         </div>
+        <div class="row setup-content" id="step-2">
+            <div class="col-xs-6 col-md-offset-3">
+                <div class="col-md-12">
 
+
+                    <h3 align="center">How would you like to donate?</h3>
+
+                    <br>
+                <div class="text-center">
+                    <div data-toggle="buttons">
+                    <div class="btn-group">
+{#                        <label class="btn btn-default btn-lg btn-recurring btn-toggle" id="id_123">#}
+{#                        <input type="radio" name="type" id="type" value="0" class="sr-only btn-recurring" required>Donate once</label>#}
+{#                        <label class="btn btn-default btn-lg btn-recurring btn-toggle">#}
+{#                        <input type="radio" name="type" id="type" value="1" class="sr-only" required>Donate monthly</label>#}
+
+                        <button type="button" class="btn btn-default btn-lg btn-recurring btn-toggle">Donate once</button>
+                        <button type="button" class="btn btn-default btn-lg btn-recurring btn-toggle">Donate monthly</button>
+                    </div>
+                    </div>
+                </div>
+                <br>
+                <div class="text-center">
+                    <div class="btn-group">
+                        {% for amt_text, amt_val in form.donation_amounts %}
+                            <button type="button" class="btn btn-default btn-lg btn-toggle btn-amt" id="id_{{ amt_val }}"
+                                    value={{ amt_val }}>{{ amt_text }}</button>
+                        {% endfor %}
+                        <button type="button" class="btn btn-default btn-lg btn-toggle btn-amt" data-toggle="collapse"
+                                data-target="#id_formgroup_amount">Other
+                        </button>
+                    </div>
+                </div>
+
+                <br>
+                   <form action="" method="post">{% csrf_token %}
+
+                        {% for field in form %}
+                            <div class="form-group" id="id_formgroup_{{ field.name }}">
+                                {% if field.name in form.show_labels %}
+                                    {% bootstrap_label field.label %}
+                                {% endif %}
+                                {% bootstrap_field field layout="vertical" vertical_field_class="col-md-3" show_label=False %}
+                            </div>
+                        {% endfor %}
+
+                    <button class="btn btn-primary nextBtn btn-lg pull-right" type="button">Next</button>
+                </div>
+            </div>
+        </div>
+        <div class="row setup-content" id="step-3">
+            <div class="col-xs-6 col-md-offset-3">
+                <div class="col-md-12">
+
+
+
+                                        {% bootstrap_label "How would you like to donate?" %}
+
+                    <p>
+                        You can donate by bank transfer, credit card, or cheque. No transaction costs are incurred by us or you with
+                        these payment methods.
+                    </p>
+
+                    <button type="button" class="btn btn-default btn-sm btn-toggle btn-pmt-method" data-toggle="collapse"
+                            data-target="id_bank_transfer" id="id_btn_bank_transfer" value="1">Bank transfer</button>
+                    <button type="button" class="btn btn-default btn-sm btn-toggle btn-pmt-method" value="2">Credit card</button>
+                    <button type="button" class="btn btn-default btn-sm btn-toggle btn-pmt-method" value="3">Cheque</button>
+
+                    <div id="id_bank_transfer">
+                        <br>Donations by bank transfer take two steps to set up.<br><br>First, you must register your intent to make a
+                        single,
+                        or recurring, transfer to our account by completing the form below. You will receive a unique code to use in the
+                        transaction.<br><br>Second, you must setup the bank transfer with your bank, using the unique code supplied.
+
+                        {% pin_form %}
+                    </div>
+                    <br>
+
+                    <div class="form-actions">
+                            <button type="submit" class="btn btn-success btn-lg pull-right" value="Submit">Submit</button>
+                        </div>
+
+                    </form>
+
+{#                    <button class="btn btn-success btn-lg pull-right" type="submit">Submit</button>#}
+                </div>
+            </div>
+        </div>
+        <div class="row setup-content" id="step-4">
+            <div class="col-xs-6 col-md-offset-3">
+                <div class="col-md-12">
+                    <h3> Step 4</h3>
+                    <button class="btn btn-success btn-lg pull-right" type="submit">Submit</button>
+                </div>
+            </div>
+        </div>
     </form>
+
 </div>
 
+
 </body>
+
+
 </html>
