--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -22,6 +22,11 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
 
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/jquery.validate.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.payment/3.0.0/jquery.payment.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/additional-methods.min.js"></script>
+
+
     {{ form.media }}
     {% pin_header "test" %}
 
@@ -45,14 +50,12 @@
                 <a href="#step-3" type="button" class="btn btn-default btn-circle" disabled="disabled">3</a>
                 <p>Payment</p>
             </div>
-            <div class="stepwizard-step">
-                <a href="#step-4" type="button" class="btn btn-default btn-circle" disabled="disabled">4</a>
-                <p>Confirmation</p>
-            </div>
         </div>
     </div>
 
-    <form role="form" action="" method="post">
+<form method='post' action='.' class='pin'>
+{#    <form method='post' action=''>#}
+{#        {% csrf_token %}#}
         <div class="row setup-content" id="step-1">
             <div class="col-xs-6 col-md-offset-3">
                 <div class="col-md-12">
@@ -90,15 +93,16 @@
                 <div class="text-center">
                     <div data-toggle="buttons">
                     <div class="btn-group">
-{#                        <label class="btn btn-default btn-lg btn-recurring btn-toggle" id="id_123">#}
+
 {#                        <input type="radio" name="type" id="type" value="0" class="sr-only btn-recurring" required>Donate once</label>#}
 {#                        <label class="btn btn-default btn-lg btn-recurring btn-toggle">#}
 {#                        <input type="radio" name="type" id="type" value="1" class="sr-only" required>Donate monthly</label>#}
 
-                        <button type="button" class="btn btn-default btn-lg btn-recurring btn-toggle">Donate once</button>
-                        <button type="button" class="btn btn-default btn-lg btn-recurring btn-toggle">Donate monthly</button>
-                    </div>
-                    </div>
+{#                        <label class="btn btn-default btn-lg btn-recurring btn-toggle" id="id_123">#}
+                        <button type="button" id="id_btn_onceoff" class="btn btn-default btn-lg btn-recurring btn-toggle">Donate once</button>
+
+                        <button type="button" id="id_btn_recurring" class="btn btn-default btn-lg btn-recurring btn-toggle">Donate monthly</button>
+                    </div></div>
                 </div>
                 <br>
                 <div class="text-center">
@@ -114,7 +118,7 @@
                 </div>
 
                 <br>
-                   <form action="" method="post">{% csrf_token %}
+{#                   <form action="" method="post">{% csrf_token %}#}
 
                         {% for field in form %}
                             <div class="form-group" id="id_formgroup_{{ field.name }}">
@@ -125,17 +129,9 @@
                             </div>
                         {% endfor %}
 
-                    <button class="btn btn-primary nextBtn btn-lg pull-right" type="button">Next</button>
-                </div>
-            </div>
-        </div>
-        <div class="row setup-content" id="step-3">
-            <div class="col-xs-6 col-md-offset-3">
-                <div class="col-md-12">
 
 
-
-                                        {% bootstrap_label "How would you like to donate?" %}
+                 {% bootstrap_label "How would you like to donate?" %}
 
                     <p>
                         You can donate by bank transfer, credit card, or cheque. No transaction costs are incurred by us or you with
@@ -153,30 +149,130 @@
                         or recurring, transfer to our account by completing the form below. You will receive a unique code to use in the
                         transaction.<br><br>Second, you must setup the bank transfer with your bank, using the unique code supplied.
 
-                        {% pin_form %}
+
                     </div>
                     <br>
+
+{#                    <form method='post' action='.' class='pin'>#}
+                        {% csrf_token %}
+                        <!-- your existing form -->
+
+
+                                   <!-- CREDIT CARD FORM STARTS HERE -->
+            <div class="panel panel-default credit-card-box">
+{#                <div class="panel-heading display-table" >#}
+{#                    <div class="row display-tr" >#}
+{#                        <h3 class="panel-title display-td" >Payment Details</h3>#}
+{#                        <div class="display-td" >#}
+{#                            <img class="img-responsive pull-right" src="http://i76.imgup.net/accepted_c22e0.png">#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+                <div class="panel-body">
+{#                    <form role="form" id="payment-form" method="POST" action="javascript:void(0);">#}
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="form-group">
+                                    <label for="couponCode">NAME ON CARD</label>
+                                    <input type="text" class="form-control" name="cardName" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="form-group">
+                                    <label for="cardNumber">CARD NUMBER</label>
+                                    <div class="input-group">
+                                        <input
+                                            type="tel"
+                                            class="form-control"
+                                            name="cardNumber"
+                                            id="id_cardNumber"
+                                            placeholder="Valid Card Number"
+                                            autocomplete="cc-number"
+                                            required autofocus
+                                        />
+                                        <span class="input-group-addon"><i class="fa fa-credit-card"></i></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-7 col-md-7">
+                                <div class="form-group">
+                                    <label for="cardExpiry"><span class="hidden-xs">EXPIRATION</span><span class="visible-xs-inline">EXP</span> DATE</label>
+                                    <input
+                                        type="tel"
+                                        class="form-control"
+                                        name="cardExpiry"
+                                        placeholder="MM / YY"
+                                        autocomplete="cc-exp"
+                                        required
+                                    />
+                                </div>
+                            </div>
+                            <div class="col-xs-5 col-md-5 pull-right">
+                                <div class="form-group">
+                                    <label for="cardCVC">CV CODE</label>
+                                    <input
+                                        type="tel"
+                                        class="form-control"
+                                        name="cardCVC"
+                                        placeholder="CVC"
+                                        autocomplete="cc-csc"
+                                        required
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <button class="subscribe btn btn-success btn-lg btn-block" type="button">Submit</button>
+                            </div>
+                        </div>
+                        <div class="row" style="display:none;">
+                            <div class="col-xs-12">
+                                <p class="payment-errors"></p>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- CREDIT CARD FORM ENDS HERE -->
+
+                        <input type='submit' value='Process Payment'>
+
+{#                    </form>#}
 
                     <div class="form-actions">
                             <button type="submit" class="btn btn-success btn-lg pull-right" value="Submit">Submit</button>
                         </div>
 
-                    </form>
+
+
+
+                    <button class="btn btn-primary nextBtn btn-lg pull-right" type="button">Next</button>
+                </div>
+            </div>
+        </div>
+        <div class="row setup-content" id="step-3">
+            <div class="col-xs-6 col-md-offset-3">
+                <div class="col-md-12">
+
+
+
+
+
+
+
 
 {#                    <button class="btn btn-success btn-lg pull-right" type="submit">Submit</button>#}
                 </div>
             </div>
         </div>
-        <div class="row setup-content" id="step-4">
-            <div class="col-xs-6 col-md-offset-3">
-                <div class="col-md-12">
-                    <h3> Step 4</h3>
-                    <button class="btn btn-success btn-lg pull-right" type="submit">Submit</button>
-                </div>
-            </div>
-        </div>
-    </form>
 
+
+{#</form>#}
 </div>
 
 
