--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -91,7 +91,7 @@
         <div class="col-xs-6 col-md-offset-3">
             <div class="col-md-12">
 
-                <form method='post' action='.' class='pin' , id='id_pledge_form'>
+                <form method='post' action='' class='pin' id='id_pledge_form'>
                     {% csrf_token %}
 
 
@@ -101,12 +101,6 @@
                     <div class="text-center">
                         <div data-toggle="buttons">
                             <div class="btn-group">
-
-                                {#                        <input type="radio" name="type" id="type" value="0" class="sr-only btn-recurring" required>Donate once</label>#}
-                                {#                        <label class="btn btn-default btn-lg btn-recurring btn-toggle">#}
-                                {#                        <input type="radio" name="type" id="type" value="1" class="sr-only" required>Donate monthly</label>#}
-
-                                {#                        <label class="btn btn-default btn-lg btn-recurring btn-toggle" id="id_123">#}
                                 <button type="button" id="id_btn_onceoff"
                                         class="btn btn-default btn-lg btn-recurring btn-toggle">Donate once
                                 </button>
@@ -147,49 +141,53 @@
 
 
 
-{#                    {% bootstrap_label "How would you like to donate?" %}#}
-{##}
-{#                    <p>#}
-{#                        You can donate by bank transfer, credit card, or cheque. No transaction costs are incurred by us#}
-{#                        or you with#}
-{#                        these payment methods.#}
-{#                    </p>#}
-                <br>
-                <div class="text-center">
+                    {#                    {% bootstrap_label "How would you like to donate?" %}#}
+                    {##}
+                    {#                    <p>#}
+                    {#                        You can donate by bank transfer, credit card, or cheque. No transaction costs are incurred by us#}
+                    {#                        or you with#}
+                    {#                        these payment methods.#}
+                    {#                    </p>#}
+                    <br>
+                    <div class="text-center">
                         <div class="btn-group" id="id_btns_pmt_method">
 
-                        <button type="button" class="btn btn-default btn-sm btn-toggle btn-pmt-method" value="1"
-                                id="id_btn_cc"
-                                data-toggle="collapse"
-                                data-target="#id_credit_card">Credit
-                            card
-                        </button>
-                        <button type="button" class="btn btn-default btn-sm btn-toggle btn-pmt-method" value="2">Paypal
-                        </button>
-                        <button type="button" class="btn btn-default btn-sm btn-toggle btn-pmt-method"
-                                data-toggle="collapse"
-                                data-target="#id_bank_transfer" id="id_btn_bank_transfer" value="3">Bank transfer
-                        </button>
+                            <button type="button" class="btn btn-default btn-sm btn-toggle btn-pmt-method" value="1"
+                                    id="id_btn_cc"
+                                    data-toggle="collapse"
+                                    data-target="#id_credit_card">Credit
+                                card
+                            </button>
+                            <button type="button" class="btn btn-default btn-sm btn-toggle btn-pmt-method" value="2">
+                                Paypal
+                            </button>
+                            <button type="button" class="btn btn-default btn-sm btn-toggle btn-pmt-method"
+                                    data-toggle="collapse"
+                                    data-target="#id_bank_transfer" id="id_btn_bank_transfer" value="3">Bank transfer
+                            </button>
                         </div>
-                </div>
-
-                <div id="id_payment_options">
-                    <div class="payment_option" id="id_bank_transfer">
-                        <br>Donations by bank transfer take two steps to set up.<br><br>First, you must register your
-                        intent to make a
-                        single,
-                        or recurring, transfer to our account by completing the form below. You will receive a unique
-                        code to use in the
-                        transaction.<br><br>Second, you must setup the bank transfer with your bank, using the unique
-                        code supplied.
-
-
                     </div>
 
-                    <br><br>
-                    <div class="payment_option" id="id_credit_card">
-                    {% pin_form %}
-                    </div>
+                    <div id="id_payment_options">
+                        <div class="payment_option" id="id_bank_transfer">
+                            <br>Donations by bank transfer take two steps to set up.<br><br>First, you must register
+                            your
+                            intent to make a
+                            single,
+                            or recurring, transfer to our account by completing the form below. You will receive a
+                            unique
+                            code to use in the
+                            transaction.<br><br>Second, you must setup the bank transfer with your bank, using the
+                            unique
+                            code supplied.
+
+
+                        </div>
+
+                        <br><br>
+                        <div class="payment_option" id="id_credit_card">
+                            {% pin_form %}
+                        </div>
 
                     </div>
 
@@ -214,12 +212,6 @@
             </div>
         </div>
     </div>
-
-
 </div>
-
-
 </body>
-
-
 </html>
